# Workspace

./: .gitignore
Android/CameraNative/: settings.gradle.kts
Android/CameraNative/LibQCarCam/: build.gradle.kts
Android/CameraNative/LibQCarCam/src/main/cpp/qcarcam_client/: CMakeLists.txt
Android/CameraNative/LibQCarCam/src/main/cpp/qcarcam_client/inc/: qcarcam_client.h
Android/CameraNative/LibQCarCam/src/main/cpp/qcarcam_client/src/: qcarcam_client.cpp
Android/CameraNative/LibQCarCam/src/main/cpp/qcarcam_client/src/impl/: qcarcam_client.cpp
Android/CameraNative/LibQCarCam/src/main/cpp/qcarcam_client/src/mock/: qcarcam_client.cpp
Android/CameraNative/LibQCarCam/src/main/cpp/qcarcam_jni/: CMakeLists.txt
Android/CameraNative/LibQCarCam/src/main/cpp/qcarcam_jni/inc/: qcarcam_jni.h
Android/CameraNative/LibQCarCam/src/main/cpp/qcarcam_jni/src/: qcarcam_jni.cpp
Android/CameraNative/NeededSystemAPI/: build.gradle.kts
Android/CameraNative/app/: build.gradle.kts
Android/CameraNative/app/debug/: output-metadata.json
Android/CameraNative/gradle/: libs.versions.toml
Android/CameraNative/gradle/wrapper/: gradle-wrapper.properties
Android/DvrSevice/: settings.gradle.kts
Android/DvrSevice/AppDvr/: build.gradle.kts
Android/DvrSevice/LibDvrCore/: build.gradle.kts
Android/DvrSevice/PerformanceTester/: build.gradle.kts
Android/DvrSevice/PerformanceTester/debug/: output-metadata.json
Android/DvrSevice/SrvDvr/: build.gradle.kts
Android/DvrSevice/app/: build.gradle.kts
Android/DvrSevice/app/debug/: output-metadata.json
Android/DvrSevice/exportToHTML/: index.html  index_SORT_BY_BLOCK.html  index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_CLASS.html  index_SORT_BY_CLASS_DESC.html  index_SORT_BY_LINE.html  index_SORT_BY_LINE_DESC.html  index_SORT_BY_METHOD.html  index_SORT_BY_METHOD_DESC.html  index_SORT_BY_NAME_DESC.html
Android/DvrSevice/exportToHTML/ns-1/: index.html  index_SORT_BY_BLOCK.html  index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_CLASS.html  index_SORT_BY_CLASS_DESC.html  index_SORT_BY_LINE.html  index_SORT_BY_LINE_DESC.html  index_SORT_BY_METHOD.html  index_SORT_BY_METHOD_DESC.html  index_SORT_BY_NAME_DESC.html
Android/DvrSevice/exportToHTML/ns-10/: index.html  index_SORT_BY_BLOCK.html  index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_CLASS.html  index_SORT_BY_CLASS_DESC.html  index_SORT_BY_LINE.html  index_SORT_BY_LINE_DESC.html  index_SORT_BY_METHOD.html  index_SORT_BY_METHOD_DESC.html  index_SORT_BY_NAME_DESC.html
Android/DvrSevice/exportToHTML/ns-11/: index.html  index_SORT_BY_BLOCK.html  index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_CLASS.html  index_SORT_BY_CLASS_DESC.html  index_SORT_BY_LINE.html  index_SORT_BY_LINE_DESC.html  index_SORT_BY_METHOD.html  index_SORT_BY_METHOD_DESC.html  index_SORT_BY_NAME_DESC.html
Android/DvrSevice/exportToHTML/ns-12/: index.html  index_SORT_BY_BLOCK.html  index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_CLASS.html  index_SORT_BY_CLASS_DESC.html  index_SORT_BY_LINE.html  index_SORT_BY_LINE_DESC.html  index_SORT_BY_METHOD.html  index_SORT_BY_METHOD_DESC.html  index_SORT_BY_NAME_DESC.html
Android/DvrSevice/exportToHTML/ns-13/: index.html  index_SORT_BY_BLOCK.html  index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_CLASS.html  index_SORT_BY_CLASS_DESC.html  index_SORT_BY_LINE.html  index_SORT_BY_LINE_DESC.html  index_SORT_BY_METHOD.html  index_SORT_BY_METHOD_DESC.html  index_SORT_BY_NAME_DESC.html
Android/DvrSevice/exportToHTML/ns-14/: index.html  index_SORT_BY_BLOCK.html  index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_CLASS.html  index_SORT_BY_CLASS_DESC.html  index_SORT_BY_LINE.html  index_SORT_BY_LINE_DESC.html  index_SORT_BY_METHOD.html  index_SORT_BY_METHOD_DESC.html  index_SORT_BY_NAME_DESC.html
Android/DvrSevice/exportToHTML/ns-2/: index.html  index_SORT_BY_BLOCK.html  index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_CLASS.html  index_SORT_BY_CLASS_DESC.html  index_SORT_BY_LINE.html  index_SORT_BY_LINE_DESC.html  index_SORT_BY_METHOD.html  index_SORT_BY_METHOD_DESC.html  index_SORT_BY_NAME_DESC.html
Android/DvrSevice/exportToHTML/ns-3/: index.html  index_SORT_BY_BLOCK.html  index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_CLASS.html  index_SORT_BY_CLASS_DESC.html  index_SORT_BY_LINE.html  index_SORT_BY_LINE_DESC.html  index_SORT_BY_METHOD.html  index_SORT_BY_METHOD_DESC.html  index_SORT_BY_NAME_DESC.html
Android/DvrSevice/exportToHTML/ns-4/: index.html  index_SORT_BY_BLOCK.html  index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_CLASS.html  index_SORT_BY_CLASS_DESC.html  index_SORT_BY_LINE.html  index_SORT_BY_LINE_DESC.html  index_SORT_BY_METHOD.html  index_SORT_BY_METHOD_DESC.html  index_SORT_BY_NAME_DESC.html
Android/DvrSevice/exportToHTML/ns-5/: index.html  index_SORT_BY_BLOCK.html  index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_CLASS.html  index_SORT_BY_CLASS_DESC.html  index_SORT_BY_LINE.html  index_SORT_BY_LINE_DESC.html  (+3 more)
Android/DvrSevice/gradle/: libs.versions.toml
(+393 files in other folders)
